--- a/aboutme.css
+++ b/aboutme.css
@@ -585,7 +585,6 @@ color : white;
     flex-direction: column;
     justify-content: space-between;
     margin-right: 30vh;
-  
 }
 /* Styles for individual lines of text */
 .text-line1 {
@@ -613,7 +612,7 @@ color : white;
 iframe {
   width: 90%;
   height: 90vh;
-  background: blueviolet;
+  background: #121212;
   margin: 5vh ;
   
 }
@@ -645,6 +644,7 @@ body, html {
   text-align: center;
   align-items: center;
   justify-content: center;
+  margin: 10vh 0vh;
 
   
 }
@@ -657,7 +657,8 @@ body, html {
  height: 20vh;
  overflow: hidden;
  margin-left: 30%;
- background-color: #00bcd4;
+ color: white;
+
 
 }
 
@@ -695,7 +696,8 @@ body, html {
   background: #121212;
   display: flex;
   flex-direction: column;
-  gap : 5vh;
+
+ 
 }
 
 .experi {
@@ -703,6 +705,7 @@ body, html {
   flex-direction: row;
   height : 100vh;
   gap: 2vh;
+
 
   
   
@@ -841,14 +844,17 @@ font-size : 4vh;
 }
 
 .exp-description {
-  background : #121212;
+  background : black;
   width : 100%;
   height : 70vh;
 color : rgb(224, 223, 224);
 align-items: center;
 justify-content: center;
-padding-right: 3vh;
+padding-left: 3vh;
+
 border-radius : 10px;
+
+
 }
 
 .descrip-head {
@@ -862,6 +868,10 @@ font-size : 2.7vh;
 line-break: 3;
 padding-right: 3vh;
 margin-top: 5vh;
+padding-left: 5vh;
+padding-right: 9vh;
+
+
 
 }
 
@@ -1076,6 +1086,7 @@ margin-top: 5vh;
 
   .all-exp {
     margin: 5vh 3vh;
+
     
   }
 
