--- a/slider.css
+++ b/slider.css
@@ -48,6 +48,13 @@
   font-size: 10vh;
 }
 
+.swiper-slide p {
+  line-break: 2.1;
+  font-size: 3vh;
+  padding: 3vh;
+  color: red;
+}
+
 
 @media (min-width : 767px) and (max-width: 950px)
 {
