--- a/myweb.css
+++ b/myweb.css
@@ -766,6 +766,8 @@ body {
 
 .image p {
   font-size: 14px;
+  color: grey;
+  width: 30vh;
 }
 
 .image:hover img {
@@ -943,12 +945,14 @@ body {
 
 
 
+
 .bottom-text {
-  width: 100%;
-  background: rgba(19, 205, 162, 0.7);
-  font-size: 5vh;
-  font-weight: 600;
-  color: #f5f5f4;
+    width: 100%;
+    background: rgb(19 205 162 / 0%);
+    font-size: 2.5vh;
+    font-weight: 600;
+    color: #000000;
+    padding: 2vh;
 
 
 }
@@ -1200,7 +1204,7 @@ body {
 
 
 .review-box h3 {
-  font-size: 18px;
+  font-size: 2vh;
   margin: 1px 5px 20px 2px;
 }
 
