--- a/aboutme.css
+++ b/aboutme.css
@@ -538,30 +538,36 @@ color : white;
     width: 30vw;
     height: 50vh ;
     overflow: hidden;
+    overflow-x: scroll;
     display: flex;
-    flex-direction: row;
-    
+    flex-direction: row;  
 }
+
+
+
+
 
 .slider img {
     width: 100%;
     height: 50vh;
-    margin: 1vh;
-    animation: slide 8s infinite;
+/*    animation: slide  50s infinite;*/
     border-radius: 10px;
-    
-   
 }
 
 @keyframes slide {
-    0% { transform: translateX(+100%); }
-    25% { transform: translateX(0%); }
-    50% { transform: translateX(-100%); }
-    75% { transform: translateX(-200%); }
-    99% { transform: translateX(-300%); }
+    0% { transform: translateX(+50%); }
+    10% { transform: translateX(0%); }
+    20% { transform: translateX(-50%); }
+    30% { transform: translateX(-100%); }
+    40% { transform: translateX(-150%); }
+    60% { transform: translateX(-200%); }
+    75% { transform: translateX(-250%); }
+    80% { transform: translateX(-300%); }
+    90% { transform: translateX(-350%); }
+    99% { transform: translateX(-400%); }
     100% {
-        transform: translateX(+100%); 
-        animation-timing-function: steps(1); /* Immediately jump back to 0% */
+        transform: translateX(+50%); 
+        animation-timing-function: steps(1); 
     }
     
     
@@ -579,8 +585,8 @@ color : white;
 
 
 .sxc-text {
-    width: 40%;
-    padding: 20px;
+    width: 100%;
+    padding: 3vh;
     display: flex;
     flex-direction: column;
     justify-content: space-between;
@@ -1030,6 +1036,9 @@ padding-right: 9vh;
     height: 25vh;
     width: 100%;
     overflow: show;
+    cursor: none;
+    pointer-events: scroll;
+
   }
 
   .sxc-img {
