--- a/aboutme.css
+++ b/aboutme.css
@@ -1,12 +1,14 @@
 
 @import url('https://fonts.googleapis.com/css2?family=Caveat:wght@700&family=PT+Serif:ital@1&display=swap');
 
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
+
 body {
-    font-family: Arial, sans-serif;
-    margin: 0;
-    padding: 0;
-    overflow-x: hidden;
-    overflow-y: scroll;
+  background: #121212;
+  font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
+
+
 }
 
 .overlay {
