--- a/research.css
+++ b/research.css
@@ -1,12 +1,12 @@
+@import url('https://fonts.googleapis.com/css2?family=Inter&display=swap');
 
 body {
-    scroll-behavior: smooth;
-    overflow-x: hidden;
-    background-color: #121212;
-    
-  
-}
+  background: #121212;
+  font-family: 'Inter', sans-serif;
+  overflow-x: hidden;
 
+
+}
 
 
 .heading {
