--- a/aboutme.css
+++ b/aboutme.css
@@ -549,6 +549,8 @@ color : white;
 
 
 
+
+
 .slider img {
     width: 100%;
     height: 50vh;
@@ -575,18 +577,13 @@ color : white;
     
 }
 
+
+
 /* Styles for "bgebs-text" */
-.bgebs-text {
-    width: 40%;
-    display: flex;
-    flex-direction: column;
-    justify-content: space-between;
-    margin-right: 30vh;
-  
-}
 
 
-.sxc-text {
+
+.sxc-text , .bgebs-text{
     width: 100%;
     padding: 3vh;
     display: flex;
