--- a/myweb.css
+++ b/myweb.css
@@ -670,8 +670,6 @@ body {
   filter: blur(50x);
   transform: translateX(-100%);
   transition: transform 2s, filter 2s;
-
-
 }
 
 .showleft {
@@ -1239,6 +1237,13 @@ body {
 
 .lower-div button:hover {
   border: 2px solid rgb(115, 0, 255);
+}
+
+.my-icons img:hover {
+  border: 0px solid rgb(115, 0, 255);
+  border-radius: 50px;
+  background-color: rgb(115, 0, 255) ;
+
 }
 
 
