--- a/research.css
+++ b/research.css
@@ -68,16 +68,15 @@ body {
     border: 1px solid #ccc;
     padding: 10px;
     background-color: white;
-    transform: translateX(200%);
-    transition: transform 2s ease-in-out;
+    transform: translateX(130%);
+    transition: transform 0.8s ease-in-out;
     
     margin-top : 5vh ;
     border-radius: 18px;
     box-shadow: grey;
-    
-
-
 }
+
+
 
 
 @keyframes slideFromBottom {
@@ -158,6 +157,8 @@ body {
 .otherinfo button {
   background-color: #121212;
   margin-top : 5vh;
+  border-radius: 10px;
+  background-color: grey;
 }
 .otherinfo button , .otherinfo img {
   margin-left: 2vh;
@@ -176,7 +177,8 @@ body {
     width : 80%;
     height: 40vh;
     margin: 3vh;
-    border : 4px solid #673fdb ;
+    border : 4px solid #673fdb;
+    align-items: center;
 
     
    
