--- a/research.css
+++ b/research.css
@@ -29,7 +29,6 @@ body {
  .project-text {
    background: transparent;
     color: white;
-
   text-align: center;
   padding-top: 3vh;
   animation: slideFromBottom 2s;
@@ -133,7 +132,7 @@ body {
 
 .otherinfo {
     width: 40%;
-    padding: 10px;
+    padding-right: 10px;
     background-color: rgb(221, 150, 52);
     align-content: center;
     gap : 5vh ;
@@ -174,10 +173,10 @@ body {
 }
 
 .otherinfo img {
-    width : 80%;
-    height: 40vh;
-    margin: 3vh;
-    border : 4px solid #673fdb;
+    width : 95%;
+    height: 50%;
+    margin: 2vh;
+    margin-top: 5vh;
     align-items: center;
 
     
@@ -603,9 +602,7 @@ body {
 
   }
 
-  .project-text {
-    height: fit-content;
-  }
+  
 
   .heading-project-cover {
     height: fit-content;
