--- a/slider.css
+++ b/slider.css
@@ -46,6 +46,7 @@
   margin-top: 50px;
   font-family: auto;
   font-size: 10vh;
+
 }
 
 .swiper-slide p {
@@ -54,6 +55,7 @@
   padding: 3vh;
   color: red;
   color: #d7d3d2;
+  padding: 10vh;
 }
 
 
